--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -21,13 +21,15 @@
         <%= f.text_field :first_name %>
       </div>
 
-
       <div class="field inlineField">
         <%= f.label :last_name, "Last Name" %>
         <%= f.text_field :last_name %>
       </div>
 
-
+      <div class="field inlineField">
+        <%= f.label :program_name, "Preferred Name in Program" %>
+        <%= f.text_field :program_name, size: 30 %>
+      </div>
 <br>
 
       <div class="field inlineField">
@@ -35,14 +37,10 @@
         <%= f.text_field :address_1, size: 40 %>
       </div>
 
-
-
-
       <div class="field inlineField">
         <%= f.label :address_2, "Address Line 2" %>
         <%= f.text_field :address_2, size: 40 %>
       </div>
-
 
 <br>
 
