--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -30,7 +30,7 @@
   </thead>
   <tbody>
     <% @members.each do |member| %>
-      <% inst_list = member.member_instruments.map(&:instrument)
+      <% inst_list = @member_instruments[member.id].map(&:instrument)
          inst_stuff = inst_list.map { |il| link_to(il.capitalize, members_url(:instrument=>il)) }.join(", ")
           %>
       <tr>
@@ -41,7 +41,7 @@
          <% end %></td>
         <td><%= inst_stuff.html_safe %></td>
         <td><%= render 'members/partials/member_set_pill',
-                        member_sets: member.member_sets %></td>
+                        member_sets: @member_sets[member.id] %></td>
         <td><%= link_to 'Edit', edit_member_path(member) %></td>
       </tr>
     <% end %>
