--- a/app/views/members/partials/_member_set_pill.html.erb
+++ b/app/views/members/partials/_member_set_pill.html.erb
@@ -1,6 +1,6 @@
 <%
 
-   member_sets.map do |member_set|
+   member_sets.reverse.map do |member_set|
      if !member_set || !member_set.member || (@performance_set && member_set.performance_set_id.to_s != @performance_set)
        next
      end
