--- a/app/views/absences/index.html.erb
+++ b/app/views/absences/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Absences</h1>
+<div class='pageHeader'><h2>Absences</h2> &emsp; <%= link_to 'New Absence', new_absence_path, class: 'button' %></div>
 
 <table>
   <thead>
@@ -30,4 +30,3 @@
 
 <br>
 
-<%= link_to 'New Absence', new_absence_path %>
