--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,8 +14,8 @@
   <br><br>
   <b>Ensembles</b>
   <br><br>
-  <%= link_to 'View Ensemble List', ensembles_path %>
-
+  <%= link_to 'View Ensemble List', ensembles_path %><br>
+  <%= link_to 'Performance Set Rehearsal Dates', performance_set_dates_path %>
 
   <br><br>
   <hr>
