--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -10,64 +10,66 @@
           <%= @member.program_name %>
           <br><br>
         <% end %>
-        <b>Address:</b><br>
-        <% if @member.address_1.present? &&
-              @member.city.present? &&
-              @member.state.present? &&
-              @member.zip.present? %>
+        <% if can_view_member_personal_info(@member) %>
+          <b>Address:</b><br>
+          <% if @member.address_1.present? &&
+                @member.city.present? &&
+                @member.state.present? &&
+                @member.zip.present? %>
 
-          <%= @member.address_1 %><br>
-          <%= @member.address_2 %>
-          <% if @member.address_2.present? %>
-            <br>
+            <%= @member.address_1 %><br>
+            <%= @member.address_2 %>
+            <% if @member.address_2.present? %>
+              <br>
+            <% end %>
+            <%= @member.city %>, <%= @member.state %> <%= @member.zip %>
+          <% else %>
+            No Valid Address Available
           <% end %>
-          <%= @member.city %>, <%= @member.state %> <%= @member.zip %>
-        <% else %>
-          No Valid Address Available
-        <% end %>
 
 
-      <br><br>
-        <strong>Phone:</strong><br>
-        <% if @member.phone_1.present? || @member.phone_2.present? %>
-          <% if @member.phone_1.present? %>
-            <%= @member.phone_1 %> (<%= @member.phone_1_type %>)<br>
+        <br><br>
+          <strong>Phone:</strong><br>
+          <% if @member.phone_1.present? || @member.phone_2.present? %>
+            <% if @member.phone_1.present? %>
+              <%= @member.phone_1 %> (<%= @member.phone_1_type %>)<br>
+            <% end %>
+            <% if @member.phone_2.present? %>
+              <%= @member.phone_2 %> (<%= @member.phone_2_type %>)
+            <% end %>
+          <% else %>
+            No Phone Numbers Available
           <% end %>
-          <% if @member.phone_2.present? %>
-            <%= @member.phone_2 %> (<%= @member.phone_2_type %>)
+        <br><br>
+          <strong>Email:</strong><br>
+          <% if @member.email_1.present? || @member.email_2.present? %>
+            <%= @member.email_1 %><br>
+            <%= @member.email_2 %>
+          <% else %>
+            No Email Addresses Available
           <% end %>
-        <% else %>
-          No Phone Numbers Available
-        <% end %>
-      <br><br>
-        <strong>Email:</strong><br>
-        <% if @member.email_1.present? || @member.email_2.present? %>
-          <%= @member.email_1 %><br>
-          <%= @member.email_2 %>
-        <% else %>
-          No Email Addresses Available
-        <% end %>
-      <br><br>
-        <strong>Emergency Contact:</strong><br>
-        <% if @member.emergency_name.present? && @member.emergency_phone.present? %>
-          <%= @member.emergency_name %>
-          <% if @member.emergency_relation.present? %>
-            (<%= @member.emergency_relation %>)
+        <br><br>
+          <strong>Emergency Contact:</strong><br>
+          <% if @member.emergency_name.present? && @member.emergency_phone.present? %>
+            <%= @member.emergency_name %>
+            <% if @member.emergency_relation.present? %>
+              (<%= @member.emergency_relation %>)
+            <% end %>
+            <%= @member.emergency_phone %>
+          <% else %>
+            No Emergency Contact Available
           <% end %>
-          <%= @member.emergency_phone %>
-        <% else %>
-          No Emergency Contact Available
-        <% end %>
-      <br><br>
-        <strong>Overall Membership Status:</strong>
-        <%= @member.playing_status %><br>
-        <strong>Waiver Signed Date:</strong>
-        <%= @member.waiver_signed %><br>
-        <strong>Initial Contact Date:</strong>
-        <%= @member.initial_date %>
-      <br><br>
-        <strong>Instruments:</strong>
-        <%= @member.member_instruments.map(&:instrument).join(', ') %>
+        <br><br>
+          <strong>Overall Membership Status:</strong>
+          <%= @member.playing_status %><br>
+          <strong>Waiver Signed Date:</strong>
+          <%= @member.waiver_signed %><br>
+          <strong>Initial Contact Date:</strong>
+          <%= @member.initial_date %>
+        <br><br>
+      <% end %>
+      <strong>Instruments:</strong>
+      <%= @member.member_instruments.map(&:instrument).join(', ') %>
       </p>
     </td>
     <td valign=top>
@@ -91,12 +93,14 @@
       <% end %>
 
       <br><br>
+      <% if can_view_member_personal_info(@member) %>
       <h2>Audit Logs</h2>
         <ul>
         <% @audit_string && @audit_string.each_with_index do |member_audit| %>
           <li><%= member_audit[:html] %>
         <% end %>
       </ul>
+      <% end %>
     </td>
   </tr>
 </table>
