Add users list endpoint

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,10 @@
   <%= link_to 'Performance Set Rehearsal Dates', performance_set_dates_path %>
 
   <br><br>
+  <b>Users</b>
+  <br><br>
+  <%= link_to 'User List', users_path %>
+  <br><br>
   <hr>
   <i>Coming Soon!</i><br><br>
   <b>Absences / Attendance</b>
@@ -31,7 +35,7 @@
   View Action Log List
 
   <br><br>
-  <b>Users</b>
+
   <br><br>
   View Users
 
