--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
   <%= link_to 'View Ensemble List', ensembles_path %><br>
   <%= link_to 'Performance Set Rehearsal Dates', performance_set_dates_path %>
 
-  <%= if current_user.global_admin? %>
+  <% if current_user.global_admin? %>
     <br><br>
     <b>Users</b>
     <br><br>
