--- a/app/views/member_mailer/standard_member_email.html.erb
+++ b/app/views/member_mailer/standard_member_email.html.erb
@@ -4,10 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1><%= @user.first_name %>, </h1>
     <p>
       <%= @body %>.<br>
     </p>
-    <p>This email was sent in an automated process from our Membership management system. If you believe you have recieved this email in error, please contact info@sfcivicsymphony.org.</p>
+    <hr>
+    <p>This email was sent by <% current_user.name %> through our Membership management system.
+       If you believe you have recieved this email in error, please contact them directly, or email info@sfcivicsymphony.org.</p>
   </body>
 </html>
