Fix current user name

--- a/app/views/member_mailer/standard_member_email.html.erb
+++ b/app/views/member_mailer/standard_member_email.html.erb
@@ -8,7 +8,7 @@
       <%= @body %>.<br>
     </p>
     <hr>
-    <p>This email was sent by <% current_user.name %> through our Membership management system.
+    <p>This email was sent by <% @current_user.name %> through our Membership management system.
        If you believe you have recieved this email in error, please contact them directly, or email info@sfcivicsymphony.org.</p>
   </body>
 </html>
