--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,51 @@ body {
   padding: 0;
 }
 
+body.top-anonymous {
+  background: $button-hover-blue;
+
+  h1.h1-anonymous {
+    font-size: 1.2em;
+    text-align: center;
+    width: 100%;
+    background: $button-dark-blue;
+    color: white;
+    padding: 20px 0;
+    margin: 0;
+  }
+
+  i {
+    font-size: 1em;
+    margin: 20px;
+    display: block;
+  }
+
+  i.form-disclaimer {
+    border-top: 1px solid $button-dark-blue;
+    padding-top: 10px;
+  }
+
+  .alert {
+    margin: 20px auto;
+  }
+
+  div.body-anonymous {
+    background: #cceeff;
+    width: 50%;
+    margin: auto;
+    padding: 30px 10px;
+
+    div.pageHeader {
+      border-bottom: 1px solid $button-dark-blue;
+    }
+
+    h2 {
+      text-transform: none;
+      text-shadow: none;
+    }
+  }
+}
+
 html {
   margin: 0;
   padding: 0;
