A few style tweaks

--- a/app/views/absences/_form.html.erb
+++ b/app/views/absences/_form.html.erb
@@ -48,6 +48,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit "Record Absence", class: 'button' %>
+    <%= f.submit "Submit Form", class: 'button' %>
   </div>
 <% end %>
