--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ body.top-anonymous {
     width: 100%;
     background: $button-dark-blue;
     color: white;
-    padding: 20px 0;
+    padding: 20px 0 80px 0;
     margin: 0;
   }
 
@@ -50,7 +50,7 @@ body.top-anonymous {
   div.body-anonymous {
     background: #cceeff;
     width: 50%;
-    margin: auto;
+    margin: -60px auto 0 auto;
     padding: 30px 10px;
 
     div.pageHeader {
