--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,7 @@ body.top-anonymous {
   }
 
   .alert {
-    margin: 20px auto;
+    margin: -60px auto 80px auto;
   }
 
   div.body-anonymous {
@@ -180,6 +180,10 @@ div {
     font-family: verdana, arial, helvetica, sans-serif;
     font-size: 13px;
     margin-top: 8px;
+  }
+
+  &.field.hidden {
+    display: none;
   }
 }
 
