--- a/app/views/absences/edit.html.erb
+++ b/app/views/absences/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Absence</h1>
 
-<%= render 'form', absence: @absence %>
+<i>This is broken, edit through the SHOW link below</i>
 
 <%= link_to 'Show', @absence %> |
 <%= link_to 'Back', absences_path %>
