--- a/app/views/absences/show.html.erb
+++ b/app/views/absences/show.html.erb
@@ -5,7 +5,7 @@
 
 <p>
   <strong>Performance Set:</strong>
-  <%= @absence.performance_set_date.performance_set.name %>
+  <%= @absence.performance_set_date.performance_set.extended_name %>
 </p>
 
 <p>
