--- a/app/views/performance_sets/roster.html.erb
+++ b/app/views/performance_sets/roster.html.erb
@@ -1,4 +1,4 @@
-<div class='pageHeader'><h2>Roster for <%= @performance_set.name %></h2></div>
+<div class='pageHeader'><h2>Roster for <%= @performance_set.extended_name %></h2></div>
 
 <br><%= @instrument_groups.flatten.length %> musicians signed up
 
