--- a/app/views/performance_sets/show.html.erb
+++ b/app/views/performance_sets/show.html.erb
@@ -4,6 +4,16 @@
 </p>
 
 <p>
+  <strong>Set Name:</strong>
+  <%= @performance_set.name %>
+</p>
+
+<p>
+  <strong>Set Description:</strong>
+  <%= @performance_set.description %>
+</p>
+
+<p>
   <strong>Start date:</strong>
   <%= @performance_set.start_date %>
 </p>
