--- a/app/views/absences/index.html.erb
+++ b/app/views/absences/index.html.erb
@@ -22,7 +22,8 @@
           <td><%= link_to member_set.member, member_set.member %></td>
           <td><%= @member_sets.where('member_id = ?', member_set.member_id).first.set_member_instruments.first.member_instrument.instrument %>
           <% @set_rehearsal_dates.each do |rehearsal_date| %>
-            <% this_absence = @absences.keep_if { |a| a.member == member_set.member && a.performance_set_date_id == rehearsal_date.id } %>
+
+            <% this_absence = @absences.select { |a| a.member && a.member.id == member_set.member.id && a.performance_set_date_id == rehearsal_date.id } %>
             <td><%= this_absence.present? ? absence_text(this_absence.first) : "" %></td>
           <% end %>
 
