--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -255,6 +255,9 @@
   <h3>Playing</h3>
     Member is playing this set, and has confirmed they are playing in the concert.
 
+  <h3>Opted In for this set</h3>
+    Member has opted in for this set, but has not yet confirmed or appeared at a rehearsal.
+
   <h3>Stopped playing, due to member's own decision</h3>
     Member is unable to play in this set, and made that decision on their own.
 
