--- a/app/views/layouts/anonymous.html.erb
+++ b/app/views/layouts/anonymous.html.erb
@@ -15,7 +15,7 @@
         <a href="#" data-dismiss="alert" class="close">×</a>
         <ul>
           <li>
-            <%= value.html_safe %>
+            <%= value.to_s.html_safe %>
           </li>
         </ul>
       </div>
