--- a/app/views/member_sets/new.html.erb
+++ b/app/views/member_sets/new.html.erb
@@ -35,6 +35,8 @@
     <select name='member_set[new_performance_set_instrument_id]' id='member_set[new_performance_set_instrument_id]' disabled><option>Please Select</option></select>
   </div>
 
+  <input type='hidden' id='member_set_id'></input>
+
   <div class="actions">
     <%= f.submit "Submit Form", class: 'button' %>
   </div>
