Add batch attendance endpoints

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -545,6 +545,11 @@ div {
   }
 }
 
+.forceLink {
+  color: blue !important;
+  text-decoration: underline;
+}
+
 #setMaster {
   margin: 0;
   padding: 0;
