--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -98,7 +98,7 @@
       <br><br>
 
       <h2>Notes</h2>
-      <% if @notes.empty? %>
+      <% if @notes || @notes.empty? %>
         <br><br>No notes to view for this member.
       <% else %>
         <ul>
